# acme-metrics

./: .gitignore  .pre-commit-config.yaml  README.md  env.manifest  justfile  pyproject.toml
.github/workflows/: container.yml
docs/: mkdocs.yml
docs/docs/: api.md  architecture.md  cheat_sheet.md  cli.md  features.md  glossary.md  guides.md  install.md  release_notes.md
src/acme_metrics/: __init__.py  _main.py  config.py  data_metrics.py  decorators.py  demo.py  demo_app.py  fixtures.py  launch.py  metrics_job.py  store.py
src/acme_metrics/cli/: __init__.py  main.py
src/acme_metrics/core/: __init__.py  base.py  config.py
src/acme_metrics/orchestration/: __init__.py  runner.py
src/acme_metrics/targets/: duckdb.py
src/acme_metrics/ui/: fragments.py
tests/acme_data_metrics/: test_cli.py  test_discovery_runner.py  test_launch.py  test_main.py
