[build-system]
requires = [ "setuptools>=46.4.0", "wheel>=0.36.2"]
build-backend = "setuptools.build_meta"

[project]
name = "acme_metrics"
version = "0.0.1"
description = "Compute metrics from data"
readme = "README.md"
classifiers = [ "Programming Language :: Python :: 3.12", ]
requires-python = ">=3.12"
dependencies = [ "python-dotenv", "polars", "pyarrow", "acme_dw>=0.0.4" ]

[[project.authors]]
email = "guner.stan@gmail.com"

[project.scripts]
adm = "acme_metrics._main:main"

[project.urls]
homepage = "https://example.com"
repository = "https://example.com"

[project.optional-dependencies]
dev = [
    "pytest",               # for testing
    "uv",                   # for venv
    "mkdocs",               # for documentation
    "mkdocs-material",      # theme for mkdocs
    "mkdocstrings[python]", # mkdocs plugin to generate API docs from sources
    "jupyterlab",           # for jupyter notebooks
    "isort",                # for import sorting
    "ruff",                 # for linting
    "pre-commit",           # for pre-commit hooks
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["acme_metrics"]
# https://github.com/astral-sh/uv/issues/9513#issuecomment-2519527822
license-files = []
# [tool.setuptools.package-data]