[build-system]
requires = ["setuptools>=46.4.0", "wheel>=0.36.2"]
build-backend = "setuptools.build_meta"

[project]
name = "acme_metrics"
version = "0.0.2"
description = "Metrics computation framework with composable stage decorators"
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3.12"]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "pandas",
    "pyarrow",
    "duckdb",
    "acme_metadeco[duckdb]",
    "acme_config",
    "acme_streamlit",
    "streamlit",
]

[[project.authors]]
email = "guner.stan@gmail.com"

[project.scripts]
adm = "acme_metrics._main:main"

[project.urls]
homepage = "https://example.com"
repository = "https://example.com"

[project.optional-dependencies]
catalog = [
    "acme_data_catalog",
]
dev = [
    "pytest",
    "uv",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["acme_metrics", "acme_metrics.ui"]
license-files = []

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
]

[tool.uv.sources]
acme_metadeco = { path = "../acme-metadeco", editable = true }
acme_config = { path = "../acme-config", editable = true }
acme_data_catalog = { path = "../acme-data-catalog", editable = true }
acme_streamlit = { path = "../acme-streamlit", editable = true }